[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Carnet/Font_SousTitre1_Livre.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/UI/Carnet/Carnet_BlocPerso.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Carnet/Font_SousTitre2_Livre.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.054902, 0.0588235, 0.054902, 1 )
border_blend = true

[sub_resource type="Theme" id=2]
PanelContainer/styles/panel = SubResource( 1 )

[node name="MembreEquipage" type="MarginContainer"]
margin_top = 556.0
margin_right = 914.0
margin_bottom = 1048.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 100
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 100.0
margin_top = 20.0
margin_right = 864.0
margin_bottom = 472.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 762.0
margin_bottom = 450.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="NomPersonnage" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 760.0
margin_bottom = 70.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/NomPersonnage"]
margin_left = 20.0
margin_top = 20.0
margin_right = 740.0
margin_bottom = 50.0
grow_horizontal = 0

[node name="Nom" type="Label" parent="PanelContainer/VBoxContainer/NomPersonnage/HBoxContainer"]
margin_right = 273.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nom Personnage"
valign = 1

[node name="Prenom" type="Label" parent="PanelContainer/VBoxContainer/NomPersonnage/HBoxContainer"]
margin_left = 277.0
margin_right = 550.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nom Personnage"
valign = 1

[node name="Aka" type="Label" parent="PanelContainer/VBoxContainer/NomPersonnage/HBoxContainer"]
margin_left = 554.0
margin_right = 720.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aka"
valign = 1

[node name="InformationPersonnage" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 760.0
margin_bottom = 138.0
grow_horizontal = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/InformationPersonnage"]
margin_left = 20.0
margin_top = 20.0
margin_right = 740.0
margin_bottom = 38.0
grow_horizontal = 0

[node name="Genre" type="Label" parent="PanelContainer/VBoxContainer/InformationPersonnage/HBoxContainer"]
margin_right = 61.0
margin_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Genre"
valign = 1

[node name="Pronom" type="Label" parent="PanelContainer/VBoxContainer/InformationPersonnage/HBoxContainer"]
margin_left = 65.0
margin_right = 143.0
margin_bottom = 18.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pronom"
valign = 1

[node name="Fonction" type="Label" parent="PanelContainer/VBoxContainer/InformationPersonnage/HBoxContainer"]
margin_left = 147.0
margin_right = 234.0
margin_bottom = 18.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fonction"
valign = 1

[node name="HistoirePersonnage" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 760.0
margin_bottom = 448.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="PanelContainer/VBoxContainer/HistoirePersonnage"]
margin_left = 20.0
margin_top = 10.0
margin_right = 750.0
margin_bottom = 290.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque consequat vel massa ultricies fringilla. Praesent tincidunt accumsan mi eu porta. Ut et magna magna. Praesent congue ac metus ut semper. Ut vitae odio sed eros lobortis sollicitudin et et purus. "
autowrap = true
